src/apps/deskfin/app/styles/AppOverrides.scss
@use "/src/apps/deskfin/styles/theme.scss" as *;

html,
body {
    font-synthesis: none;
    quotes: "“" "”";
    font-size: 17px;
    -webkit-font-smoothing: antialiased;
    interpolate-size: allow-keywords;
}

// Default MUI breakpoints
// https://mui.com/material-ui/customization/breakpoints/#default-breakpoints
$mui-bp-sm: 600px;
$mui-bp-md: 900px;
$mui-bp-lg: 1200px;
$mui-bp-xl: 1536px;

#reactRoot {
    height: 100%;
}

.libraryPage h1:not(.MuiTypography-h1) {
    font-size: 36px;
    margin: 24px auto 0;
    color: #fff;
    font-weight: 600;
    text-align: center;
}

// Hide some items from the user "settings" page that are in the drawer
#myPreferencesMenuPage {
    .lnkQuickConnectPreferences,
    .adminSection,
    .userSection {
        display: none !important;
    }
}

.backgroundContainer,
.dialog,
.nowPlayingPlaylist,
.nowPlayingContextMenu,
html {
    background-color: $app-ackground !important;
}

// Fix the padding of some pages
.homePage.libraryPage.withTabs, // Home page
// Library pages excluding the item details page and tabbed pages
.libraryPage:not(
    .itemDetailPage
) {
    padding-top: 52px !important;
}

.layout-mobile {
    .itemBackdrop {
        // Fix backdrop position on mobile item details page
        margin-top: 0 !important;

        // Add a subtle gradient over the backdrop to ensure the app bar buttons are visible
        &::before {
            display: block;
            content: "";
            height: 100%;
            width: 100%;
            background: linear-gradient(
                180deg,
                rgba(32, 32, 32, 0.6) 0%,
                rgba(32, 32, 32, 0.2) 64px,
                rgba(0, 0, 0, 0) 50%
            );
        }
    }
}

.videoOsdBottom .buttons {
    visibility: hidden;
    height: 42px;
}

// hide pinterest popovers that show in SOME people's browsers
html body > span:last-child[style*='background:url("data:image/svg+xml'] {
    display: none !important;
    visibility: hidden !important;
    opacity: 0;
}

